
[build-system]
requires = [
    "pytest-datadir",
    "hatchling",
    "pytest ~= 7.3.1",
    "pytest-mock",
    "pytest-datadir",

]
build-backend = "hatchling.build"

[project]
name = "gitgo"
version = "0.0.1"


[tool.ruff]
line-length = 120
ignore = ["E501"]

[tool.isort]
line_length = 120
multi_line_output = 2
include_trailing_comma = true

[tool.ruff.isort]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
    "--strict-markers",
]
markers = [
    "placeholder: A placeholder for a test to be written"
]
testpaths = [
    "tests",
]
